# whisperwire

./: CONTRIBUTING.md  LICENSE  README.md
app/: package-lock.json  package.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: database.rs  evaluator.rs  lib.rs  llm.rs  rules.rs
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: AdminView.tsx  AgentView.tsx  AlertCard.tsx  Header.tsx  RulesView.tsx  SuggestionsPanel.tsx  TranscriptPanel.tsx
app/src/lib/: demo-data.ts  evaluator.ts  mock-data.ts  rules.ts
app/src/types/: index.ts
docs/: architecture.md  ruleset.md
rules/: tcpa-rules.yaml
scripts/: demo-runner.js
