[package]
name = "whisperwire"
version = "0.1.0"
description = "Real-time TCPA Compliance Copilot for Call Centers"
authors = ["Whisperwire Team"]
license = "MIT"
repository = "https://github.com/yourusername/whisperwire"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "whisperwire_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
